# mallard

./: README.md  TODO.md  meson.build  version.py
.github/workflows/: tests.yml
src/: meson.build
src/assembler/: ansi.h  ast_node.c  ast_node.h  compile.c  compile.h  elf.c  elf.h  fatal_error.c  fatal_error.h  file.c  file.h  instructions.c  instructions.h  lexer.c  lexer.h  main.c  meson.build  parser.c  parser.h  str.h  str_table.c  str_table.h  token.c  token.h  tokens.c  tokens.h  vector.h  version.h.in
src/assembler/tests/: meson.build  qemu-entry.c  qemu-exit-success.c
src/kernel/: entry.mpf  kernel.mpf
